# internal/docs/swagger.yaml
@@ -19,17 +19,17 @@ components:
       type: object
     domain.FeedResponse:
       properties:
+        cursor:
+          example: 10
+          type: integer
         has_more:
           example: true
           type: boolean
         limit:
           example: 10
           type: integer
-        next_offset:
+        next_cursor:
           example: 20
-          type: integer
-        offset:
-          example: 10
           type: integer
         posts:
           items:
@@ -350,7 +350,7 @@ paths:
       parameters:
       - description: Количество пропускаемых постов
         in: query
-        name: offset
+        name: cursor
         schema:
           default: 0
           type: integer
